add project-name to env

--- a/template/public.env
+++ b/template/public.env
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 export MONIKER=2fcbacbc-a56e-4e40-946e-a425b0162f3c &&
+    export PROJECT_NAME=inner &&
     export CLOUD9_PORT=10604 &&
     export USER_NAME="Emory Merryman" &&
     export USER_EMAIL=emory.merryman@gmail.com &&
